--- a/Bemol.csproj
+++ b/Bemol.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageId>Bemol</PackageId>
+    <Version>0.1.1</Version>
+    <Authors>Tommy Josepovic</Authors>
+    <IsPackable>true</IsPackable>
     <TargetFramework>net5.0</TargetFramework>
-    <StartupObject>Program</StartupObject>
   </PropertyGroup>
 
-   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+  <ItemGroup>
+    <Compile Remove="test\**" />
   </ItemGroup>
 
 </Project>
