--- a/Bemol.csproj
+++ b/Bemol.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotLiquid" Version="2.0.366" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="test\**" />
   </ItemGroup>
 
