--- a/test/Bemol.Test.csproj
+++ b/test/Bemol.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <StartupObject>Program</StartupObject>
+    <StartupObject>Debug</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
