--- a/test/Bemol.Test.csproj
+++ b/test/Bemol.Test.csproj
@@ -11,6 +11,13 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
 
+  <!-- Include static folder in bin -->
+  <ItemGroup> 
+    <Content Include="static\**"> 
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+    </Content> 
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="../Bemol.csproj" />
   </ItemGroup>
