--- a/Bemol.csproj
+++ b/Bemol.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DotLiquid" Version="2.0.366" /> 
+    <PackageReference Include="DotLiquid" Version="2.0.366" />
+    <PackageReference Include="MimeTypeMapOfficial" Version="1.0.14" />
   </ItemGroup>
 </Project>
