--- a/Bemol.csproj
+++ b/Bemol.csproj
@@ -6,12 +6,19 @@
     <Authors>Tommy Josepovic</Authors>
     <IsPackable>true</IsPackable>
     <TargetFramework>net5.0</TargetFramework>
-    <DefaultItemExcludes>$(DefaultItemExcludes);test\**</DefaultItemExcludes>
+    <DefaultItemExcludes>$(DefaultItemExcludes);test\**;debug\**</DefaultItemExcludes>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DotLiquid" Version="2.0.366" />
     <PackageReference Include="MimeTypeMapOfficial" Version="1.0.14" />
     <PackageReference Include="HttpMultipartParser" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Bemol.Test</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 </Project>
