--- a/test/Bemol.Test.csproj
+++ b/test/Bemol.Test.csproj
@@ -1,8 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">  
+<Project Sdk="Microsoft.NET.Sdk">  
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <StartupObject>Debug</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,16 +10,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
   </ItemGroup>
 
-  <!-- Include static folders in bin -->
-  <ItemGroup> 
-    <Watch Include="resources/**;public/**" />
-    <None Include="resources/**;public/**"> 
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
-    </None> 
-  </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="../Bemol.csproj" />
   </ItemGroup>
-
 </Project>
