--- a/Bemol.csproj
+++ b/Bemol.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <PackageId>Bemol</PackageId>
-    <Version>0.1.3</Version>
+    <Version>0.1.4</Version>
     <Authors>Tommy Josepovic</Authors>
     <IsPackable>true</IsPackable>
     <TargetFramework>net5.0</TargetFramework>
@@ -10,6 +10,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
+  </ItemGroup>
+  
   <ItemGroup>
     <PackageReference Include="DotLiquid" Version="2.0.366" />
     <PackageReference Include="MimeTypeMapOfficial" Version="1.0.14" />
