--- a/debug/Bemol.Debug.csproj
+++ b/debug/Bemol.Debug.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">  
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <!-- Include static folders in bin -->
-  <ItemGroup> 
-    <Watch Include="resources/**;public/**" />
-    <None Include="resources/**;public/**"> 
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
-    </None> 
+  <ItemGroup>
+    <Watch Include="**/templates/**;static/**" Exclude="bin/**;obj/**" />
+    <None Include="**/templates/**;static/**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <ItemGroup>
